--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-dinky
-title: Добро пожаловать на мой сайт!
-Description: Здесь я храню свои статьи.
+title: Привет!
+Description: Здесь живут мои статьи.
